--- a/src/app/user-dashboard/receive/receive.component.html
+++ b/src/app/user-dashboard/receive/receive.component.html
@@ -11,7 +11,7 @@
               </div>
               <div class="card-body">
                 <div class="myCard">
-                  <div class="row justify-content-center">
+                  <div class="row justify-content-center" [formGroup]="form">
                     <!-- <ng-select [items]="options" bindLabel="label" bindValue="value" [searchable]="true"
                     placeholder="Select an option">
                     <ng-template ng-option-tmp let-item="item">
@@ -91,7 +91,7 @@
 
                     <div class="col-md-12 mt-3">
                       <h6>Coin</h6>
-                      <select class="form-select custom-select-bg" aria-label="Default select example">
+                      <select class="form-select custom-select-bg" formControlName="coin" aria-label="Default select example">
                         <option selected>USDT</option>
                         <option value="1">
                           <div class="row d-flex align-items-center">
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                         </option>
-                        <option value="2">Two</option>
+                        <option value="TRON">TRON</option>
                         <option value="3">Three</option>
                       </select>
 
@@ -116,9 +116,9 @@
 
                     <div class="col-md-12 mt-3">
                       <h6>Network</h6>
-                      <select class="form-select custom-select-bg" aria-label="Default select example">
+                      <select class="form-select custom-select-bg" formControlName="network" aria-label="Default select example">
                         <option selected>Select Network</option>
-                        <option value="1">
+                        <option value="USDT">
                           <div class="row d-flex align-items-center">
                             <div class="col-md-3">
                                 <img class="img-fluid w-100" src="../../../assets/img/usdt-small.png"
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         </option>
-                        <option value="2">Two</option>
+                        <option value="TRON">TRON</option>
                         <option value="3">Three</option>
                       </select>
 
@@ -147,7 +147,7 @@
                         <p>Select Network to obtain address</p>
         
                         <div class="mt-4">
-                          <button class="btn btn-orange btn-block m-0 w-100"  type="submit">Download As Image</button>
+                          <button class="btn btn-orange btn-block m-0 w-100"  type="submit" [disabled]="!form.valid" (click)="onGetAddress()">Get Address</button>
                         </div>
         
                       </div>
@@ -160,7 +160,7 @@
             </div>
           </div>
           <div class="col-md-7">
-            <div class="row">
+            <div *ngIf="!downloadedTxt" class="row">
               <div class="col-xl-12 box-col-12">
                 <div class="card custom-card card-management">
                   <div class="card-body flex-column flex-md-row justify-content-between align-items-center">
@@ -212,11 +212,13 @@
                 </div>
               </div>
             </div>
-
-            <div class="row wallet-address">
+            <div *ngIf="downloadedTxt" class="row wallet-address">
               <div class="qr-code-section text-center">
                 <div class="">
-                  <img src="../../../assets/img/qr_code_scanner.png" alt="">
+                  <!-- <img src="{{downloadedImg}}" alt=""> -->
+                   <div>
+                    <qrcode [qrdata]="downloadedTxt" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
+                   </div>
                 </div>
                 <p>Please ensure you are sending coins of the designated <br>
                   network to this address.</p>
@@ -226,7 +228,7 @@
               <div class="col-md-7">
                 <h6>Wallet Address</h6>
                 <div class="d-flex align-items-center">
-                  <span class="mr-2">0x4a6fd189d40ff9856ed593a7f296a448d7e8db4e</span>
+                  <span class="mr-2">{{downloadedTxt}}</span>
                   <button class="btn btn-outline-secondary border-0">
                     <i class="bi bi-copy"></i>
                   </button>
@@ -234,7 +236,7 @@
               </div>
               <div class="col-md-5">
                 <div class="mt-4">
-                  <button class="btn btn-orange btn-block m-0 w-100"  type="submit">Download As Image</button>
+                  <button class="btn btn-orange btn-block m-0 w-100"  type="button" (click)="downloadQR()">Download As Image</button>
                 </div>
               </div>
 
@@ -289,11 +291,7 @@
                     </div>
                 </div>
             </div>
-            </div>
-
-            
-
-             
+            </div>             
           </div>
         </div>
       </div>
