footer-bg image, collateral-injection changes

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer START -->
-<footer>
+<footer class="footer-bg">
 	<div class="container">
 		<div class="row">
 			<!-- Column 1 Start -->
