--- a/src/app/user-dashboard/collateral-injection/collateral-injection.component.html
+++ b/src/app/user-dashboard/collateral-injection/collateral-injection.component.html
@@ -40,8 +40,12 @@
                                                 </select>
                                             </div>
                                         </div>
-                                       
+                                        <div class="mb-0 text-end section-heading">
+                                            <p class="py-0"><strong class="text-white">Available Balance</strong> = 1000 USDT</p>
+                                            
+                                          </div>
                                     </div>
+                                    
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -69,6 +73,10 @@
                                     <label class="col-form-label text-white" for="phoneNumber">To</label>
                                     <input class="form-control" type="text" id="expectedArrival" required placeholder="0.00">
                                     <div class="show-hide"><span class="show"> </span></div>
+                                    <div class="mt-3 text-end section-heading">
+                                        <p class="py-0"><strong class="text-white">Available Balance</strong> 5025 HKD</p>
+                                        
+                                      </div>
                                 </div>
                               <div class="row pt-5">
                                 <div class="col-12 col-md-6 col-lg-6">
