alignment menu responsive favicon

--- a/src/app/landing/credit-card/credit-card.component.html
+++ b/src/app/landing/credit-card/credit-card.component.html
@@ -7,7 +7,7 @@
 			</div>				
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="pl-30-md">
-					<div class="section-heading">
+					<div class="section-heading mob-mt-30">
 						<h4>World Elite Credit Card</h4>
 					</div>
 					<div class="row mt-20">
