--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -825,7 +825,7 @@ i) Animations
         transform: translate(0%, 0%);
     }
     .feature-box{
-        margin: 30px 0px 30px 0px;
+        margin: 30px 30px 30px 30px;
     }
 	.feature-box-long svg{
 		width:70px;
@@ -833,6 +833,13 @@ i) Animations
     .footer-bar .nav{
         justify-content: center;
     }
+
+	.mob-pad-bottom-40{
+        padding-bottom:40px !important;
+    }
+	.mob-mt-30{
+		margin-top: 30px;
+	}
  }
 
  .why-cuttle{
